examples/fail/compare_ord_type_mismatch.hax
module ZZZ::CompareOrdTypeMismatch;

sub main() -> Int {
  var Int $a := 1;
  var Float $b := 2.0;
  if ($a < $b) { }
  return 0;
}
